# hse-dc-lab1

./: CMakeLists.txt  Makefile  README.md
src/mandelbrot/: main.c  mandelbrot.c  mandelbrot.h  timer.h
src/montecarlo/: main.c  montecarlo.c  montecarlo.h
src/rwlock/: my_rand.c  pth_ll_rwl.c  rwlock.c  rwlock.h
tests/: measure.py
